# althea

./: .eleventy.js  .env.example  .gitignore  .npmrc  HELP.md  README.md  app.py  astro.config.mjs  audits.py  blueprint  config.toml  db.py  deno.json  exporters.py  fresh.gen.ts  importers.py  index.html  manage.py  models.py  netlify.toml  next.config.js  normalize.py  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  pyaudioop.py  pyproject.toml  qa.py  queries.py  remix.config.js  requirements.txt  scoring.py  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
.streamlit/: secrets.toml.example
app/: cli.py  crypto-client.mjs  db.py  diff_json.py  diff_text.py  entry.server.tsx  explain.py  globals.css  layout.tsx  main.py  models.py  normalizer.py  page.tsx  root.tsx  routes.py  schema_store.py  scorer.py  security.py  settings.py  utils.py  validator.py
assets/: main.css  theme.css
atlas_gallery/: asgi.py  settings.py  urls.py  wsgi.py
blueprint_library/: asgi.py  settings.py  urls.py  wsgi.py
components/: DataTable.vue  FilterBar.vue  Nav.tsx  SaveViewModal.vue  TagInput.tsx  ViewPicker.vue
composables/: useDeviceKey.ts
content/: _index.md
lib/: db.ts  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+2233 files in other folders)
