[package]
name = "operator-ledger"
version = "0.1.0"
description = "Local-first operator decision ledger"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
